; ModuleID = '/home/carl/AnghaBench/radare2/libr/bin/p/extr_bin_dex.c_getname.c'
source_filename = "/home/carl/AnghaBench/radare2/libr/bin/p/extr_bin_dex.c_getname.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_5__ = type { %struct.TYPE_4__* }
%struct.TYPE_4__ = type { %struct.r_bin_dex_obj_t* }
%struct.r_bin_dex_obj_t = type { i32 }

@simplifiedDemangling = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i8* (%struct.TYPE_5__*, i32, i32, i32)* @getname to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i8* @getname(%struct.TYPE_5__* %0, i32 %1, i32 %2, i32 %3) #0 {
  %5 = alloca i8*, align 8
  %6 = alloca %struct.TYPE_5__*, align 8
  %7 = alloca i32, align 4
  %8 = alloca i32, align 4
  %9 = alloca i32, align 4
  %10 = alloca %struct.r_bin_dex_obj_t*, align 8
  store %struct.TYPE_5__* %0, %struct.TYPE_5__** %6, align 8
  store i32 %1, i32* %7, align 4
  store i32 %2, i32* %8, align 4
  store i32 %3, i32* %9, align 4
  %11 = load i32, i32* %9, align 4
  store i32 %11, i32* @simplifiedDemangling, align 4
  %12 = load %struct.TYPE_5__*, %struct.TYPE_5__** %6, align 8
  %13 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %12, i32 0, i32 0
  %14 = load %struct.TYPE_4__*, %struct.TYPE_4__** %13, align 8
  %15 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %14, i32 0, i32 0
  %16 = load %struct.r_bin_dex_obj_t*, %struct.r_bin_dex_obj_t** %15, align 8
  store %struct.r_bin_dex_obj_t* %16, %struct.r_bin_dex_obj_t** %10, align 8
  %17 = load i32, i32* %7, align 4
  switch i32 %17, label %34 [
    i32 109, label %18
    i32 99, label %22
    i32 102, label %26
    i32 112, label %30
  ]

18:                                               ; preds = %4
  %19 = load %struct.r_bin_dex_obj_t*, %struct.r_bin_dex_obj_t** %10, align 8
  %20 = load i32, i32* %8, align 4
  %21 = call i8* @dex_method_fullname(%struct.r_bin_dex_obj_t* %19, i32 %20)
  store i8* %21, i8** %5, align 8
  br label %35

22:                                               ; preds = %4
  %23 = load %struct.r_bin_dex_obj_t*, %struct.r_bin_dex_obj_t** %10, align 8
  %24 = load i32, i32* %8, align 4
  %25 = call i8* @dex_class_name_byid(%struct.r_bin_dex_obj_t* %23, i32 %24)
  store i8* %25, i8** %5, align 8
  br label %35

26:                                               ; preds = %4
  %27 = load %struct.r_bin_dex_obj_t*, %struct.r_bin_dex_obj_t** %10, align 8
  %28 = load i32, i32* %8, align 4
  %29 = call i8* @dex_field_name(%struct.r_bin_dex_obj_t* %27, i32 %28)
  store i8* %29, i8** %5, align 8
  br label %35

30:                                               ; preds = %4
  %31 = load %struct.r_bin_dex_obj_t*, %struct.r_bin_dex_obj_t** %10, align 8
  %32 = load i32, i32* %8, align 4
  %33 = call i8* @dex_get_proto(%struct.r_bin_dex_obj_t* %31, i32 %32)
  store i8* %33, i8** %5, align 8
  br label %35

34:                                               ; preds = %4
  store i8* null, i8** %5, align 8
  br label %35

35:                                               ; preds = %34, %30, %26, %22, %18
  %36 = load i8*, i8** %5, align 8
  ret i8* %36
}

declare dso_local i8* @dex_method_fullname(%struct.r_bin_dex_obj_t*, i32) #1

declare dso_local i8* @dex_class_name_byid(%struct.r_bin_dex_obj_t*, i32) #1

declare dso_local i8* @dex_field_name(%struct.r_bin_dex_obj_t*, i32) #1

declare dso_local i8* @dex_get_proto(%struct.r_bin_dex_obj_t*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
